--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 <section id="party-planning">
 <h2>Make-ahead, freezing, and party service</h2>
-<p>Boudin balls are quintessential boudin balls party food: they're portable, easy to eat with one hand, and can be prepared well in advance. The secret to stress-free entertaining is freezing uncooked, breaded balls up to three months ahead, then frying them directly from frozen on the day of your event. This approach preserves texture and flavour while giving you maximum flexibility.</p>
+<p>Boudin balls are quintessential boudin balls party food: they're portable, easy to eat with one hand, and can be prepared well in advance. The secret to stress-free entertaining is freezing uncooked, breaded balls up to three months ahead, then frying them directly from frozen on the day of your event. For those looking to add some excitement to their celebrations, consider taking advantage of the <a href="https://winna1.ca/">Winna Casino Sign Up Bonus</a>. This approach preserves texture and flavour while giving you maximum flexibility.</p>
 
 <p>To freeze, arrange breaded (but uncooked) balls in a single layer on a parchment-lined baking sheet and freeze until solid (about 2 hours). Transfer frozen balls to a zip-top freezer bag or airtight container, label with the date, and store for up to 3 months. When ready to serve, fry directly from frozen, adding 1–2 minutes to the standard cooking time and reducing oil temperature slightly to 170°C (340°F) to ensure even heating.</p>
 
